<resources>
    <string name="app_name">APDE</string>
    <string name="title_activity_editor">APDE</string>
    <string name="menu_save">Save Sketch</string>
    <string name="menu_open">Load Sketch</string>
    <string name="menu_export">Export Sketch</string>
    <string name="menu_run">Run</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_new">New Sketch</string>
    <string name="menu_tab_new">New Tab</string>
    <string name="menu_tab_rename">Rename Tab</string>
    <string name="menu_tab_delete">Delete Tab</string>
    <string name="external_storage_dialog_title">External Storage Unavailable</string>
    <string name="external_storage_dialog_message">The sketch cannot be saved because the external storage on your device is either unavailable or unwritable.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="sketch_saved">The sketch has been saved.</string>
    <string name="sketch_save_failure">The sketch has not been saved properly.</string>
    <string name="name_invalid_first_char">Error: Tab names must not start with a number or an underscore!</string>
    <string name="name_invalid_char">Error: Tab names may contain only A-Z, a-z, numbers, and underscores!</string>
    <string name="tab_renamed">The tab has been renamed.</string>
    <string name="tab_created">The tab has been created.</string>
    <string name="tab_deleted">The tab has been deleted.</string>
    <string name="name_invalid_no_char">Error: Tab name must contain text!</string>
    <string name="title_activity_sketch_properties">Sketch Properties</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sketch_properties">Sketch Properties</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete Tab?</string>
    <string name="delete_dialog_message">Are you sure you want to delete this tab?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menu_change_sketch_name">Change Sketch Name</string>
    <string name="change_sketch_name_dialog_title">Change Sketch Name</string>
    <string name="change_sketch_name_dialog_message">Enter the new name for the sketch:</string>
    <string name="tab_rename_dialog_title">Rename Tab</string>
    <string name="tab_rename_dialog_message">Enter the new name for the tab:</string>
    <string name="drawer_list_title_sketchbook">Sketchbook</string>
    <string name="nav_drawer_open">Load a Sketch</string>
    <string name="nav_drawer_close">Return to Sketch</string>
    <string name="menu_delete">Delete Sketch</string>
    <string name="save_sketch_dialog_title">Save Sketch?</string>
    <string name="save_sketch_dialog_message">Do you want to save the sketch before creating a new sketch?</string>
    <string name="save_sketch">Save</string>
    <string name="dont_save_sketch">Don\'t Save</string>
    <string name="delete_sketch_dialog_title">Delete \&quot;%1$s\&quot;?</string>
    <string name="delete_sketch_dialog_message">Are you sure you want to delete sketch \&quot;%1$s\&quot;?</string>
    <string name="name_invalid_same_title">Error: This tab already exists!</string>
    <string name="tab_new_dialog_title">New Tab</string>
    <string name="tab_new_dialog_message">Enter the name for the new tab:</string>
    <string name="sketch_name_dialog_title">Save Sketch</string>
    <string name="sketch_name_dialog_message">Enter the name for the sketch (cannot be \"sketch\"):</string>
    <string name="save_sketch_before_run_dialog_title">Save Sketch</string>
    <string name="save_sketch_before_run_dialog_message">You must save the sketch before you can run it.</string>
    <string name="build_sketch_message">Building sketch…</string>
    <string name="gen_project_message">Creating Android Project…</string>
    <string name="run_aapt">Packaging resources…</string>
    <string name="run_ecj">Compiling…</string>
    <string name="run_dx">Dexing compiled files…</string>
    <string name="run_apkbuilder">Building APK file…</string>
    <string name="run_zipsigner">Signing APK with a debug certificate…</string>
    <string name="run_sketch">Running the sketch…</string>
    <string-array name="empty"></string-array>
    <string name="title_activity_permissions">Sketch Permissions</string>
    <string name="create">Create</string>
    <string name="custom_perm">Custom Permission</string>
    <string name="build_failed">Build failed, check the console for more information.</string>
    <string name="build_halted">Build stopped before sketch was launched.</string>
    <string name="chooser_label">Select File</string>
    <string name="drawer_list_title_examples">Examples</string>
    <string name="auto_formatter_complete">Auto Format Completed</string>
    <string name="auto_format">Auto Format</string>
    <string name="toggle_char_inserts">Toggle Character Bar</string>
    <string name="title_activity_character_tray_settings">Special Character Tray</string>
    <string name="import_library">Import Library</string>
    <string name="no_contributed_libraries">Libraries folder is empty</string>
    <string name="manage_libraries">Manage Libraries</string>
    <string name="title_activity_library_manager">Library Manager</string>
    <string name="action_install_zip_library">Install Compressed Library</string>
    <string name="select_library_zip">Select Library Archive</string>
    <string name="more">More</string>
    <string name="library_install_dialog_title">Installing</string>
    <string name="extracting">Extracting</string>
    <string name="dexing">Dexing</string>
    <string name="menu_contrib_uninstall">Uninstall</string>
    <string name="uninstall_warning_title">Uninstall</string>
    <string name="uninstall_warning_message">will be uninstalled.</string>
    <string name="library_uninstall_dialog_title">Uninstalling</string>
    <string name="run_in_background">Run in Background</string>
    <string name="invalid_file_error_title">Invalid File</string>
    <string name="invalid_file_error_message_1">The requested file does not exist. Try using a different file manager.</string>
    <string name="invalid_file_error_message_2">The requested file is not a ZIP archive.</string>
    <string name="invalid_file_error_message_3">The requested library has already been installed.</string>
    <string name="action_get_libraries">Get Libraries</string>
    <string name="sketch_name_invalid_first_char">Error: Sketch names must not start with a number or an underscore!</string>
    <string name="sketch_name_invalid_char">Error: Sketch names may contain only A-Z, a-z, numbers, and underscores!</string>
    <string name="sketch_name_invalid_no_char">Error: Sketch name must contain text!</string>
    <string name="sketch_name_invalid_sketch">Error: Sketch name must not be \"sketch\"!</string>
    <string name="tools">Tools</string>
    <string name="icon">Icon</string>
    <string name="sketches">Sketches</string>
    <string name="examples">Examples</string>
    <string name="library_examples">Library Examples</string>
    <string name="recent">Recent</string>
    <string name="copy_to_sketchbook">Copy to Sketchbook</string>
    <string name="color_selector">Color Selector</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="copy_hex">Copy Hex to Clipboard</string>
    <string name="hex_color">Hex Color</string>
    <string name="hex_color_copied_to_clipboard">Hex color data copied to clipboard.</string>
    <string name="comment_uncomment">Comment / Uncomment</string>
    <string name="increase_indent">Increase Indent</string>
    <string name="decrease_indent">Decrease Indent</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="cannot_move_sketch_title">Cannot Move Sketch</string>
    <string name="cannot_move_folder_title">Cannot Move Folder</string>
    <string name="cannot_move_folder_message">Another file of the same name exists in the destination folder.</string>
    <string name="new_folder">New Folder</string>
    <string name="edit_folder">Rename Folder</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="delete_folder_dialog_message">Are you sure you want to delete folder \&quot;%1$s\&quot;?</string>
    <string name="move_to_new_folder_title">Move to New Folder</string>
    <string name="move_to_new_folder_descrption">Enter the name for the new folder:</string>
    <string name="rename_sketch_title">Rename Sketch \&quot;%1$s\&quot;</string>
    <string name="rename_sketch_message">Enter the new name for the sketch:</string>
    <string name="rename_folder_title">Rename Folder \&quot;%1$s\&quot;</string>
    <string name="rename_folder_message">Enter the new name for the folder:</string>
    <string name="rename">Rename</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_name_folder_no_text">Folder names must contain text!</string>
    <string name="invalid_name_folder_invalid_char">Folder names may contain only letters, numbers, underscores and spaces!</string>
    <string name="invalid_name_sketch_no_char">Sketch names must contain text!</string>
    <string name="invalid_name_sketch_first_char">Sketch names must not start with a number or an underscore!</string>
    <string name="invalid_name_sketch_sketch">Sketch name must not be \&quot;sketch\&quot;!</string>
    <string name="invalid_name_sketch_invalid_char">Sketch names may contain only letters, numbers, and underscores!</string>
    <string name="cannot_create_new_folder_title">Cannot Create New Folder</string>
    <string name="export_eclipse_project">Export Eclipse Project</string>
    <string name="export_eclipse_project_complete">The Eclipse project has been exported.</string>
    <string name="export_signed_package">Export Signed Package</string>
    <string name="keystore_file">Keystore</string>
    <string name="keystore_file_select">Select Keystore File</string>
    <string name="keystore_new">Create Keystore</string>
    <string name="keystore_password">Keystore Password</string>
    <string name="alias">Key Alias</string>
    <string name="alias_new">Create Key</string>
    <string name="export">Export</string>
    <string name="alias_password">Key Password</string>
    <string name="no_aliases">Alias (Keystore empty)</string>
    <string name="keystore_password_confirm">Comfirm Keystore Password</string>
    <string name="alias_password_confirm">Confirm Key Password</string>
    <string name="certificate_validity">Validity (years):</string>
    <string name="certificate_name">First and Last Name:</string>
    <string name="certificate_organizational_unit">Organizational Unit:</string>
    <string name="certificate_organization">Organization:</string>
    <string name="certificate_city">City or Locality:</string>
    <string name="certificate_state">State or Province:</string>
    <string name="certificate_country">Country Code (XX):</string>
    <string name="default_certificate_validity">25</string>
    <string name="export_signed_package_complete">The signed package has been exported.</string>
    <string name="error_keystore_file_nonexistant">Keystore file does not exist</string>
    <string name="error_keystore_not_recoverable">Keystore not recoverable, password may be incorrect</string>
    <string name="info_enter_keystore_file">Enter or select keystore file path</string>
    <string name="info_enter_keystore_password">Enter keystore password</string>
    <string name="info_enter_key_password">Enter key password</string>
    <string name="error_key_not_recoverable">Key not recoverable, password may be incorrect</string>
</resources>